tests/neg-macros/beta-reduce-inline-result.check

-- [E007] Type Mismatch Error: tests/neg-macros/beta-reduce-inline-result/Test_2.scala:11:41 ---------------------------
11 |  val x2: 4   = Macros.betaReduce(dummy1)(3) // error
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                Found:    Int
   |                Required: (4 : Int)
   |
   | longer explanation available when compiling with `-explain`
